--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>
       Home || BMR
     </title>
-    <link rel="shortcut icon" href="afbeeldingen/icon.png" />
+    <link rel="shortcut icon" href="afbeeldingen/bmr.png"/>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,34 +29,99 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="icon navbar-brand" href="index.html"><img src="" alt="afbeelding (komt nog)"></a>
+          <a class="icon navbar-brand" href="index.html"><img id="logo" src="afbeeldingen/bmrsmall.png" alt="afbeelding"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-    				<li>
-              <a href="#">Over ons</a>
-            </li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Over ons</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div><!--/.container-fluid -->
     </nav>
-    <!-- Fotos die je kan kiezen -->
-    <section id="fotos" class="hidden-xs">
-      <img class="mySlides move" src="afbeeldingen/building.jpg" alt="Building">
-      <img class="mySlides move" src="afbeeldingen/building.jpg" alt="drone">
-      <a class="button-left" onclick="plusDivs(-1)">&#10094;</a>
-      <a class="button-right" onclick="plusDivs(+1)">&#10095;</a>
+
+      <!-- Fotos die je kan kiezen -->
+     <section id="fotobackground">
+      <div id="fotos">
+          <div id="slides">
+              <div id="slide1" class="slide showing"><img class="slideheight" src="afbeeldingen/kraanVoor.jpg" alt="Kraan" /></div>
+              <div id="slide2" class="slide"><img class="slideheight" src="afbeeldingen/DSCN9713.jpg" alt="Huis2" /></div>
+              <div class="slide"><img class="slideheight" src="afbeeldingen/huis1.jpg" alt="Huis1" /></div>
+          </div>
+      </div>
     </section>
+      <!-- Fotos die je kan kiezen -->
 
-    <!--  -->
-    <section>
-
+      <!-- Tekst intro -->
+    <section id="tekst">
+      <div id="info" class="container">
+        <div class="row">
+          <div class="col-sm-8 col-sm-offset-2">
+            <h2 class="rodeLetters"><span>B</span>ouwwerken <span>M</span>olenaers <span>R</span>onald</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+              <p>
+                <h4><strong>Hierbij stel ik even in het kort mijn eenmanszaak voor.</strong></h4>
+              <br/>
+            <p class="tekst">
+              Het bouwbedrijf is door mijn vader, Jan Molenaers, in 1977 opgericht.<br/><br/>
+              na jaren ervaring opgedaan te hebben heb ik de zaak overgenomen in 1996.<br/>
+              Mijn werkzaamheden omvatten nieuwbouw projecten, als ook verbouwingen en renovaties in traditionele metselwerk, lijmen en dunbedmortel.<br/>
+            </p>
+          </div>
+          <div class="col-sm-6">
+            <p>
+              <strong><em>Nieuws:</em></strong><br/><br/>
+              Hier komt eventuele info over projecten die bezig zijn.
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
+      <!-- Tekst intro -->
 
+      <!-- Projecten -->
+    <section id="projecten">
+      <div class="container">
+        <p>
+          Eventuele projecten die hier getoond kunnen worden.
+        </p>
+      </div>
+    </section>
+      <!-- Projecten -->
 
-
-
+    <!-- footer -->
+    <section id="footkleur">
+      <footer id="foot">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-5 col-sm-offset-1">
+              <p class="footTitel">
+                <b>Bouwwerken Molenaers <br/> Ronald</b>
+              </p>
+              <p class="tekstFoot">
+                Geenstraat 49, 3660 Opglabbeek, Belgi&euml;<br/>
+                tel: +32(0)89 85 34 56<br/>
+                gsm: 0497315589<br/>
+                kristel.waghemans@gmail.com
+              </p>
+            </div>
+            <div class="col-sm-5 col-sm-offset-1">
+               <h6 class="footTitel">
+                   <b class="siteMap">Sitemap</b>
+               </h6>
+                <ul class="linkenfoot">
+                   <li><a href="#">HOME</a></li>
+                   <li><a href="#">OVER ONS</a></li>
+                </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </section>
+    <!-- footer -->
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
