--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   	<meta name="description" content="Welkom bij BMR. Bouwerken Molenaers Ronald zorgt voor het bouwen van jouw huis." />
   	<meta name="keywords" content="Bouw, Construction" />
-  	<meta name="author" content="Jens" />
+  	<meta name="author" content="Jens M." />
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-  	<link href="HoofdCss.css" type="text/css" rel="stylesheet"/>
+    <!-- css file -->
+    <link href="HoofdCss.css" type="text/css" rel="stylesheet"/>
+    <!-- font -->
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   </head>
   <body>
 
-<!-- Navaigatie -->
+    <!-- Navaigatie -->
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -39,8 +42,9 @@
         </div><!--/.nav-collapse -->
       </div><!--/.container-fluid -->
     </nav>
+    <!-- Navaigatie -->
 
-      <!-- Fotos die je kan kiezen -->
+    <!-- Fotos die je kan kiezen -->
      <section id="fotobackground">
       <div id="fotos">
           <div id="slides">
@@ -50,18 +54,18 @@
           </div>
       </div>
     </section>
-      <!-- Fotos die je kan kiezen -->
+    <!-- Fotos die je kan kiezen -->
 
-      <!-- Tekst intro -->
+    <!-- Tekst intro -->
     <section id="tekst">
       <div id="info" class="container">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
-            <h2 class="rodeLetters"><span>B</span>ouwwerken <span>M</span>olenaers <span>R</span>onald</h2>
+            <h2 class="rodeLetters titleTekst"><span>B</span>ouwwerken <span>M</span>olenaers <span>R</span>onald</h2>
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-6 tekstCenter">
               <p>
                 <h4><strong>Hierbij stel ik even in het kort mijn eenmanszaak voor.</strong></h4>
               <br/>
@@ -71,7 +75,8 @@
               Mijn werkzaamheden omvatten nieuwbouw projecten, als ook verbouwingen en renovaties in traditionele metselwerk, lijmen en dunbedmortel.<br/>
             </p>
           </div>
-          <div class="col-sm-6">
+            <br class="visible-xs" />
+          <div class="col-sm-6 tekstCenter">
             <p>
               <strong><em>Nieuws:</em></strong><br/><br/>
               Hier komt eventuele info over projecten die bezig zijn.
@@ -80,9 +85,9 @@
         </div>
       </div>
     </section>
-      <!-- Tekst intro -->
+    <!-- Tekst intro -->
 
-      <!-- Projecten -->
+    <!-- Projecten -->
     <section id="projecten">
       <div class="container">
         <p>
@@ -90,14 +95,14 @@
         </p>
       </div>
     </section>
-      <!-- Projecten -->
+    <!-- Projecten -->
 
     <!-- footer -->
     <section id="footkleur">
       <footer id="foot">
         <div class="container">
           <div class="row">
-            <div class="col-sm-5 col-sm-offset-1">
+            <div class="col-sm-5 col-sm-offset-1 tekstCenter">
               <p class="footTitel">
                 <b>Bouwwerken Molenaers <br/> Ronald</b>
               </p>
@@ -108,9 +113,9 @@
                 kristel.waghemans@gmail.com
               </p>
             </div>
-            <div class="col-sm-5 col-sm-offset-1">
-               <h6 class="footTitel">
-                   <b class="siteMap">Sitemap</b>
+            <div class="col-sm-5 col-sm-offset-1 hidden-xs">
+               <h6 class="footTitel siteMap">
+                   <b>Sitemap</b>
                </h6>
                 <ul class="linkenfoot">
                    <li><a href="#">HOME</a></li>
