--- a/index.html
+++ b/index.html
@@ -90,23 +90,33 @@
     <!-- Projecten -->
     <section id="projecten">
         <div class="row">
-            <div class="Projects col-sm-6">
+             <div class="Projects col-sm-6">
                 <img id="Foto1" class="img-responsive" alt="ProjectBusy" src="afbeeldingen/Busy.jpg"/>
             </div>
             <div class="col-sm-6">
-             <p class="project1Tekst">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt varius imperdiet. Nam tincidunt nisl ipsum, sed semper mi tempus quis. Aliquam pharetra ligula a arcu bibendum, vitae finibus libero placerat. Mauris laoreet iaculis mauris in sollicitudin. Phasellus tempor bibendum libero, eu tincidunt elit posuere elementum. Nullam tempus mi nisi. Ut sapien eros, molestie at elit in, sodales pharetra justo. Aliquam urna nisi, aliquet at ante vel, sollicitudin auctor justo. Duis ultrices semper sem in euismod. Donec vel sem nisl. Vestibulum tempor id felis et varius.
-            </p>
+                <p class="projectTekst">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt varius imperdiet. Nam tincidunt nisl ipsum, sed semper mi tempus quis. Aliquam pharetra ligula a arcu bibendum, vitae finibus libero placerat. Mauris laoreet iaculis mauris in sollicitudin. Phasellus tempor bibendum libero, eu tincidunt elit posuere elementum. Nullam tempus mi nisi. Ut sapien eros, molestie at elit in, sodales pharetra justo. Aliquam urna nisi, aliquet at ante vel, sollicitudin auctor justo. Duis ultrices semper sem in euismod. Donec vel sem nisl. Vestibulum tempor id felis et varius.
+                </p>
             </div>
         </div>
-        <div class="row">
+        <div class="row hidden-xs">
             <div class="col-sm-6">
-             <p class="project2Tekst">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt varius imperdiet. Nam tincidunt nisl ipsum, sed semper mi tempus quis. Aliquam pharetra ligula a arcu bibendum, vitae finibus libero placerat. Mauris laoreet iaculis mauris in sollicitudin. Phasellus tempor bibendum libero, eu tincidunt elit posuere elementum. Nullam tempus mi nisi. Ut sapien eros, molestie at elit in, sodales pharetra justo. Aliquam urna nisi, aliquet at ante vel, sollicitudin auctor justo. Duis ultrices semper sem in euismod. Donec vel sem nisl. Vestibulum tempor id felis et varius.
-            </p>
+                <p class="projectTekst">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt varius imperdiet. Nam tincidunt nisl ipsum, sed semper mi tempus quis. Aliquam pharetra ligula a arcu bibendum, vitae finibus libero placerat. Mauris laoreet iaculis mauris in sollicitudin. Phasellus tempor bibendum libero, eu tincidunt elit posuere elementum. Nullam tempus mi nisi. Ut sapien eros, molestie at elit in, sodales pharetra justo. Aliquam urna nisi, aliquet at ante vel, sollicitudin auctor justo. Duis ultrices semper sem in euismod. Donec vel sem nisl. Vestibulum tempor id felis et varius.
+                </p>
             </div>
             <div class="Projects col-sm-6">
                 <img id="Foto2" class="img-responsive" alt="ProjectDone" src="afbeeldingen/Done.jpg"/>
+            </div>
+        </div>
+        <div class="row visible-xs">
+            <div class="Projects col-sm-6">
+                <img id="Foto2visxl" class="img-responsive" alt="ProjectDone" src="afbeeldingen/Done.jpg"/>
+            </div>
+            <div class="col-sm-6">
+                <p class="projectTekst">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt varius imperdiet. Nam tincidunt nisl ipsum, sed semper mi tempus quis. Aliquam pharetra ligula a arcu bibendum, vitae finibus libero placerat. Mauris laoreet iaculis mauris in sollicitudin. Phasellus tempor bibendum libero, eu tincidunt elit posuere elementum. Nullam tempus mi nisi. Ut sapien eros, molestie at elit in, sodales pharetra justo. Aliquam urna nisi, aliquet at ante vel, sollicitudin auctor justo. Duis ultrices semper sem in euismod. Donec vel sem nisl. Vestibulum tempor id felis et varius.
+                </p>
             </div>
         </div>
         <div id="EndFoto">
@@ -115,9 +125,9 @@
                     <img id="Foto3" class="img-responsive" alt="ProjectFinished" src="afbeeldingen/Finished.jpg"/>
                 </div>
                 <div class="col-sm-6">
-                 <p class="project1Tekst">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt varius imperdiet. Nam tincidunt nisl ipsum, sed semper mi tempus quis. Aliquam pharetra ligula a arcu bibendum, vitae finibus libero placerat. Mauris laoreet iaculis mauris in sollicitudin. Phasellus tempor bibendum libero, eu tincidunt elit posuere elementum. Nullam tempus mi nisi. Ut sapien eros, molestie at elit in, sodales pharetra justo. Aliquam urna nisi, aliquet at ante vel, sollicitudin auctor justo. Duis ultrices semper sem in euismod. Donec vel sem nisl. Vestibulum tempor id felis et varius.
-                </p>
+                    <p class="projectTekst">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt varius imperdiet. Nam tincidunt nisl ipsum, sed semper mi tempus quis. Aliquam pharetra ligula a arcu bibendum, vitae finibus libero placerat. Mauris laoreet iaculis mauris in sollicitudin. Phasellus tempor bibendum libero, eu tincidunt elit posuere elementum. Nullam tempus mi nisi. Ut sapien eros, molestie at elit in, sodales pharetra justo. Aliquam urna nisi, aliquet at ante vel, sollicitudin auctor justo. Duis ultrices semper sem in euismod. Donec vel sem nisl. Vestibulum tempor id felis et varius.
+                    </p>
                 </div>
             </div>
         </div>
