--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
   <head>
     <title>
       Home || BMR
@@ -36,13 +36,13 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Over ons</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="binnenkort.html">Over ons</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div><!--/.container-fluid -->
     </nav>
-    <!-- Navaigatie -->
+    <!-- Navigatie -->
 
     <!-- Fotos die je kan kiezen -->
      <section id="fotobackground">
@@ -65,7 +65,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6 tekstCenter">
+          <div class="col-sm-5 col-sm-offset-1 tekstCenter">
               <p>
                 <h4><strong>Hierbij stel ik even in het kort mijn eenmanszaak voor.</strong></h4>
               <br/>
@@ -76,7 +76,7 @@
             </p>
           </div>
             <br class="visible-xs" />
-          <div class="col-sm-6 tekstCenter">
+          <div class="col-sm-5 col-sm-offset-1 tekstCenter nieuws">
             <p>
               <strong><em>Nieuws:</em></strong><br/><br/>
               Hier komt eventuele info over projecten die bezig zijn.
@@ -90,42 +90,32 @@
     <!-- Projecten -->
     <section id="projecten">
         <div class="row">
-             <div class="Projects col-sm-6">
-                <img id="Foto1" class="img-responsive" alt="ProjectBusy" src="afbeeldingen/Busy.jpg"/>
+             <div class="Projects fade col-md-6">
+                <img id="Foto1" class="img-responsive fotoProjecten" alt="ProjectBusy" src="afbeeldingen/Busy.jpg"/>
             </div>
-            <div class="col-sm-6">
-                <p class="projectTekst">
+            <div class="col-md-6" id="tekst1">
+                <p class="projectTekst tekstCenter">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt varius imperdiet. Nam tincidunt nisl ipsum, sed semper mi tempus quis. Aliquam pharetra ligula a arcu bibendum, vitae finibus libero placerat. Mauris laoreet iaculis mauris in sollicitudin. Phasellus tempor bibendum libero, eu tincidunt elit posuere elementum. Nullam tempus mi nisi. Ut sapien eros, molestie at elit in, sodales pharetra justo. Aliquam urna nisi, aliquet at ante vel, sollicitudin auctor justo. Duis ultrices semper sem in euismod. Donec vel sem nisl. Vestibulum tempor id felis et varius.
                 </p>
             </div>
         </div>
-        <div class="row hidden-xs">
-            <div class="col-sm-6">
-                <p class="projectTekst">
+        <div class="row hidden-sm hidden-xs">
+            <div class="col-md-6" id="tekst2">
+                <p class="projectTekst tekstCenter">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt varius imperdiet. Nam tincidunt nisl ipsum, sed semper mi tempus quis. Aliquam pharetra ligula a arcu bibendum, vitae finibus libero placerat. Mauris laoreet iaculis mauris in sollicitudin. Phasellus tempor bibendum libero, eu tincidunt elit posuere elementum. Nullam tempus mi nisi. Ut sapien eros, molestie at elit in, sodales pharetra justo. Aliquam urna nisi, aliquet at ante vel, sollicitudin auctor justo. Duis ultrices semper sem in euismod. Donec vel sem nisl. Vestibulum tempor id felis et varius.
                 </p>
             </div>
-            <div class="Projects col-sm-6">
-                <img id="Foto2" class="img-responsive" alt="ProjectDone" src="afbeeldingen/Done.jpg"/>
-            </div>
-        </div>
-        <div class="row visible-xs">
-            <div class="Projects col-sm-6">
-                <img id="Foto2visxl" class="img-responsive" alt="ProjectDone" src="afbeeldingen/Done.jpg"/>
-            </div>
-            <div class="col-sm-6">
-                <p class="projectTekst">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt varius imperdiet. Nam tincidunt nisl ipsum, sed semper mi tempus quis. Aliquam pharetra ligula a arcu bibendum, vitae finibus libero placerat. Mauris laoreet iaculis mauris in sollicitudin. Phasellus tempor bibendum libero, eu tincidunt elit posuere elementum. Nullam tempus mi nisi. Ut sapien eros, molestie at elit in, sodales pharetra justo. Aliquam urna nisi, aliquet at ante vel, sollicitudin auctor justo. Duis ultrices semper sem in euismod. Donec vel sem nisl. Vestibulum tempor id felis et varius.
-                </p>
+            <div class="Projects fade col-md-6">
+                <img id="Foto2" class="img-responsive fotoProjecten" alt="ProjectDone" src="afbeeldingen/Done.jpg"/>
             </div>
         </div>
         <div id="EndFoto">
             <div class="row">
-                <div class="Projects col-sm-6">
-                    <img id="Foto3" class="img-responsive" alt="ProjectFinished" src="afbeeldingen/Finished.jpg"/>
+                <div class="Projects fade col-md-6">
+                    <img id="Foto3" class="img-responsive fotoProjecten" alt="ProjectFinished" src="afbeeldingen/Finished.jpg"/>
                 </div>
-                <div class="col-sm-6">
-                    <p class="projectTekst">
+                <div class="col-md-6" id="tekst3" >
+                    <p class="projectTekst tekstCenter">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt varius imperdiet. Nam tincidunt nisl ipsum, sed semper mi tempus quis. Aliquam pharetra ligula a arcu bibendum, vitae finibus libero placerat. Mauris laoreet iaculis mauris in sollicitudin. Phasellus tempor bibendum libero, eu tincidunt elit posuere elementum. Nullam tempus mi nisi. Ut sapien eros, molestie at elit in, sodales pharetra justo. Aliquam urna nisi, aliquet at ante vel, sollicitudin auctor justo. Duis ultrices semper sem in euismod. Donec vel sem nisl. Vestibulum tempor id felis et varius.
                     </p>
                 </div>
@@ -156,10 +146,19 @@
                    <b>Sitemap</b>
                </h6>
                 <ul class="linkenfoot">
-                   <li><a href="#">HOME</a></li>
-                   <li><a href="#">OVER ONS</a></li>
+                   <li><a href="index.html">HOME</a></li>
+                   <li><a href="binnenkort.html">OVER ONS</a></li>
                 </ul>
             </div>
+          </div>
+          <div class="row">
+              <div class="col-sm-5 col-sm-offset-1">
+                   &copy; 2017 Bouwerken molenaers Ronald<br/>
+                   <a href="http://thebelgiumgames.co.nf/">webdesign by Jens</a><br/>
+                   <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-sa/4.0/">
+                        <img alt="Creative Commons-Licentie" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
+                   </a>
+              </div>
           </div>
         </div>
       </footer>
