Update vernieuwing website

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  	<meta name="description" content="Welkom bij BMR. Bouwerken Molenaers Ronald zorgt voor het bouwen van jouw huis." />
-  	<meta name="keywords" content="Bouw, Construction" />
-  	<meta name="author" content="Jens M." />
+    <meta name="description" content="Welkom bij BMR. Bouwerken Molenaers Ronald zorgt voor het bouwen van jouw huis." />
+    <meta name="keywords" content="Bouw, Construction" />
+    <meta name="author" content="Jens M." />
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -37,7 +37,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="binnenkort.html">Over ons</a></li>
+            <li><a href="binnenkort.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div><!--/.container-fluid -->
@@ -48,9 +48,10 @@
      <section id="fotobackground">
       <div id="fotos">
           <div id="slides">
-              <div id="slide1" class="slide showing"><img class="slideheight" src="afbeeldingen/kraanVoor.jpg" alt="Kraan" /></div>
-              <div id="slide2" class="slide"><img class="slideheight" src="afbeeldingen/DSCN9713.jpg" alt="Huis2" /></div>
-              <div class="slide"><img class="slideheight" src="afbeeldingen/huis1.jpg" alt="Huis1" /></div>
+              <div id="slide1" class="slide showing"><img class="slideheight" src="afbeeldingen/kraanVoor.JPG" alt="Kraan" /></div>
+              <div id="slide2" class="slide"><img class="slideheight" src="afbeeldingen/DSCN9713.JPG" alt="Huis2" /></div>
+              <div id="slide3" class="slide"><img class="slideheight" src="afbeeldingen/DSCN9750.JPG" alt="Huis3" /></div>
+              <div class="slide"><img class="slideheight" src="afbeeldingen/huis1.JPG" alt="Huis1" /></div>
           </div>
       </div>
     </section>
@@ -71,15 +72,18 @@
               <br/>
             <p class="tekst">
               Het bouwbedrijf is door mijn vader, Jan Molenaers, in 1977 opgericht.<br/><br/>
-              na jaren ervaring opgedaan te hebben heb ik de zaak overgenomen in 1996.<br/>
-              Mijn werkzaamheden omvatten nieuwbouw projecten, als ook verbouwingen en renovaties in traditionele metselwerk, lijmen en dunbedmortel.<br/>
+              Na jaren ervaring opgedaan te hebben heb ik de zaak overgenomen in 1996.<br/>
+              Mijn werkzaamheden omvatten nieuwbouw projecten in traditioneel metselwerk, lijmen en/of dunbedmortel. Ook verbouwingen en renovaties horen hier bij.<br/>
             </p>
           </div>
             <br class="visible-xs" />
           <div class="col-sm-5 col-sm-offset-1 tekstCenter nieuws">
             <p>
+            <!--Hier komt eventuele info over projecten die bezig zijn.-->
               <strong><em>Nieuws:</em></strong><br/><br/>
-              Hier komt eventuele info over projecten die bezig zijn.
+              Binnenkort wordt de site geupdate.<br/><br/>
+              Kort geleden is er een inwijding van de nieuwe kraan geweest.<br/>
+              Deze vervangt de oude kraan die jaren dienst heeft gedaan.
             </p>
           </div>
         </div>
@@ -89,20 +93,25 @@
 
     <!-- Projecten -->
     <section id="projecten">
+        <h1 class="projectTitel" >Projecten</h1>
         <div class="row">
              <div class="Projects fade col-md-6">
-                <img id="Foto1" class="img-responsive fotoProjecten" alt="ProjectBusy" src="afbeeldingen/Busy.jpg"/>
+                <img id="Foto1" class="img-responsive fotoProjecten" alt="ProjectBusy" src="afbeeldingen/Busy.JPG"/>
             </div>
             <div class="col-md-6" id="tekst1">
                 <p class="projectTekst tekstCenter">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt varius imperdiet. Nam tincidunt nisl ipsum, sed semper mi tempus quis. Aliquam pharetra ligula a arcu bibendum, vitae finibus libero placerat. Mauris laoreet iaculis mauris in sollicitudin. Phasellus tempor bibendum libero, eu tincidunt elit posuere elementum. Nullam tempus mi nisi. Ut sapien eros, molestie at elit in, sodales pharetra justo. Aliquam urna nisi, aliquet at ante vel, sollicitudin auctor justo. Duis ultrices semper sem in euismod. Donec vel sem nisl. Vestibulum tempor id felis et varius.
+                    <strong>Nieuwbouw</strong>
+                    <br/>
+                    De vorderingen van de bouw van een gezinswoning
                 </p>
             </div>
         </div>
         <div class="row hidden-sm hidden-xs">
             <div class="col-md-6" id="tekst2">
                 <p class="projectTekst tekstCenter">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt varius imperdiet. Nam tincidunt nisl ipsum, sed semper mi tempus quis. Aliquam pharetra ligula a arcu bibendum, vitae finibus libero placerat. Mauris laoreet iaculis mauris in sollicitudin. Phasellus tempor bibendum libero, eu tincidunt elit posuere elementum. Nullam tempus mi nisi. Ut sapien eros, molestie at elit in, sodales pharetra justo. Aliquam urna nisi, aliquet at ante vel, sollicitudin auctor justo. Duis ultrices semper sem in euismod. Donec vel sem nisl. Vestibulum tempor id felis et varius.
+                    <strong>Klassiek</strong>
+                    <br/>
+                    Een voorbeeld van een recente klassieke woning
                 </p>
             </div>
             <div class="Projects fade col-md-6">
@@ -116,7 +125,9 @@
                 </div>
                 <div class="col-md-6" id="tekst3" >
                     <p class="projectTekst tekstCenter">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt varius imperdiet. Nam tincidunt nisl ipsum, sed semper mi tempus quis. Aliquam pharetra ligula a arcu bibendum, vitae finibus libero placerat. Mauris laoreet iaculis mauris in sollicitudin. Phasellus tempor bibendum libero, eu tincidunt elit posuere elementum. Nullam tempus mi nisi. Ut sapien eros, molestie at elit in, sodales pharetra justo. Aliquam urna nisi, aliquet at ante vel, sollicitudin auctor justo. Duis ultrices semper sem in euismod. Donec vel sem nisl. Vestibulum tempor id felis et varius.
+                        <strong>Modern</strong>
+                        <br/>
+                        Een voorbeeld van een recente moderne woning
                     </p>
                 </div>
             </div>
@@ -134,11 +145,11 @@
               <p class="footTitel">
                 <b>Bouwwerken Molenaers <br/> Ronald</b>
               </p>
-              <p class="tekstFoot">
+              <p class="tekstFoot titleWebDesign">
                 Geenstraat 49, 3660 Opglabbeek, Belgi&euml;<br/>
                 tel: +32(0)89 85 34 56<br/>
                 gsm: 0497315589<br/>
-                kristel.waghemans@gmail.com
+               <a href="mailto:bouwwerken@bmronny.be">bouwwerken@bmronny.be</a>
               </p>
             </div>
             <div class="col-sm-5 col-sm-offset-1 hidden-xs">
@@ -151,12 +162,17 @@
                 </ul>
             </div>
           </div>
+          <br/>
           <div class="row">
+              <div class="col-sm-5 col-sm-offset-1 tekstFoot titleWebDesign">
+                <hr/>
+                   &copy; 2017 Bouwwerken molenaers Ronald<br/>
+                   <a href="http://thebelgiumgames.co.nf/" target="_blank">webdesign by Jens</a><br/>
+              </div>
               <div class="col-sm-5 col-sm-offset-1">
-                   &copy; 2017 Bouwerken molenaers Ronald<br/>
-                   <a href="http://thebelgiumgames.co.nf/">webdesign by Jens</a><br/>
-                   <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-sa/4.0/">
-                        <img alt="Creative Commons-Licentie" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
+                  <br/>
+                  <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-sa/4.0/">
+                        <img class="license" alt="Creative Commons-Licentie" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
                    </a>
               </div>
           </div>
