--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Welkom bij BMR. Bouwerken Molenaers Ronald zorgt voor het bouwen van jouw huis." />
-    <meta name="keywords" content="Bouw, Construction" />
-    <meta name="author" content="Jens M." />
+  	<meta name="description" content="Welkom bij BMR. Bouwerken Molenaers Ronald zorgt voor het bouwen van jouw huis." />
+  	<meta name="keywords" content="Bouw, Construction" />
+  	<meta name="author" content="Jens M." />
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
   </head>
   <body>
 
-    <!-- Navaigatie -->
+    <!-- Navigatie -->
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -37,6 +37,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
+            <li><a href="binnenkort.html">Info</a></li>
             <li><a href="binnenkort.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -49,7 +50,7 @@
       <div id="fotos">
           <div id="slides">
               <div id="slide1" class="slide showing"><img class="slideheight" src="afbeeldingen/kraanVoor.JPG" alt="Kraan" /></div>
-              <div id="slide2" class="slide"><img class="slideheight" src="afbeeldingen/DSCN9713.JPG" alt="Huis2" /></div>
+              <div id="slide2" class="slide"><img class="slideheight" src="afbeeldingen/DSCN9723.JPG" alt="Huis2" /></div>
               <div id="slide3" class="slide"><img class="slideheight" src="afbeeldingen/DSCN9750.JPG" alt="Huis3" /></div>
               <div class="slide"><img class="slideheight" src="afbeeldingen/huis1.JPG" alt="Huis1" /></div>
           </div>
