--- a/binnenkort.html
+++ b/binnenkort.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="nl">
   <head>
@@ -8,9 +9,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Welkom bij BMR. Bouwerken Molenaers Ronald zorgt voor het bouwen van jouw huis." />
-    <meta name="keywords" content="Bouw, Construction" />
-    <meta name="author" content="Jens" />
+  	<meta name="description" content="Welkom bij BMR. Bouwerken Molenaers Ronald zorgt voor het bouwen van jouw huis." />
+  	<meta name="keywords" content="Bouw, Construction" />
+  	<meta name="author" content="Jens" />
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -63,6 +64,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
+            <li><a href="binnenkort.html">Info</a></li>
             <li><a href="binnenkort.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -76,10 +78,10 @@
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="js/bootstrap.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
                 <script src="hoofdjs.js"></script>
   </body>
 </html>
