--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="binnenkort.html">Info</a></li>
-            <li><a href="binnenkort.html">Contact</a></li>
+            <li><a href="contact.php">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div><!--/.container-fluid -->
