--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="binnenkort.html">Info</a></li>
+            <!--<li><a href="binnenkort.html">Info</a></li>-->
             <li><a href="contact.php">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -50,7 +50,6 @@
       <div id="fotos">
           <div id="slides">
               <div id="slide1" class="slide showing"><img class="slideheight" src="afbeeldingen/kraanVoor.JPG" alt="Kraan" /></div>
-              <div id="slide2" class="slide"><img class="slideheight" src="afbeeldingen/DSCN9723.JPG" alt="Huis2" /></div>
               <div id="slide3" class="slide"><img class="slideheight" src="afbeeldingen/DSCN9750.JPG" alt="Huis3" /></div>
               <div class="slide"><img class="slideheight" src="afbeeldingen/huis1.JPG" alt="Huis1" /></div>
           </div>
@@ -159,7 +158,7 @@
                </h6>
                 <ul class="linkenfoot">
                    <li><a href="index.html">HOME</a></li>
-                   <li><a href="binnenkort.html">OVER ONS</a></li>
+                   <li><a href="contact.php">CONTACT</a></li>
                 </ul>
             </div>
           </div>
