--- a/mailform.html
+++ b/mailform.html
@@ -2,14 +2,38 @@
 	<html>
 	<head>
 		<title></title>
+		<link href="mail.css" type="text/css" rel="stylesheet"/>
+
 	</head>
 	<body>
-
 		<div id="mail">
+			<div id="logo">
+				<img id="logoafbeelding" src="afbeeldingen/bmrsmallgray.png" alt="afbeelding">
+			</div>
 			
-			
+<!-- TODO bekijk oef les 6 css voor voorbeeld + mail Adobe MAX. -->
+        	<h2 class="rodeLetters titleTekst"><span>B</span>ouwwerken <span>M</span>olenaers <span>R</span>onald</h2>
+
+        	<p id="bericht">
+        		Hallo Meneer Ronald, Mevrouw Waghemans<br/><br/>
+        		Er is een mail aangekomen van NAAM met als bericht:<br/>
+        		BERICHT
+        	</p>
+
+        	<p id="info">
+        		E-mailadres van NAAM: EMAILADRES.<br/>
+        		De telefoon- en/of mobiel-nummer van NAAM: Telefoon: TELEFOON, mobiel: MOBIEL.
+        	</p>
+
+        	<p id="footer">
+        		Met vriendelijke groeten,<br/>
+        		NAAM.
+        	</p>
+
+        	<p id="copy">
+        		design door Jens.
+        	</p>
 
 		</div>
-
 	</body>
 </html>
