--- a/mailform.html
+++ b/mailform.html
@@ -2,16 +2,56 @@
 	<html>
 	<head>
 		<title></title>
-		<link href="mail.css" type="text/css" rel="stylesheet"/>
+		<style type="text/css">
+			body{
+				background-color: #b3b5b7;
+			}
 
+			#mail{
+				width: 770px;
+				margin: auto;
+				background-color: white;
+				border-radius: 15%;
+			}
+
+			#logo{
+				background-color: #37393a;
+				border-radius: 10%;
+			}
+
+			#logoafbeelding{
+				margin-left: 20px;
+			}
+
+			.rodeLetters{
+			  text-align: center;
+			}
+
+			.rodeLetters span{
+			  color:red;
+			}
+
+			#gegevens{
+				padding: 10px;
+				margin-left: 10px;
+			}
+
+			#bericht{
+				font-size: 120%;
+				font-weight: bold;
+			}
+
+			#copy{
+				font-size: 70%;
+				text-align: center;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="mail">
 			<div id="logo">
 				<img id="logoafbeelding" src="https://i.imgur.com/3smh3KU.png" alt="afbeelding">
 			</div>
-			
-<!-- TODO bekijk oef les 6 css voor voorbeeld + mail Adobe MAX. -->
 		<h2 class="rodeLetters titleTekst"><span>B</span>ouwwerken <span>M</span>olenaers <span>R</span>onald</h2>
 
 			<div id="gegevens">
